rabbitmq/rabbitmq-rabbitmq-ha.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["51.77.137.98"],"port":80,"protocol":"HTTP","serviceName":"rabbitmq:rabbitmq-rabbitmq-ha","ingressName":"rabbitmq:rabadmin","hostname":"rabbit.blueforest.org","path":"/","allNodes":true}]'
  labels:
    app: rabbitmq-ha
    chart: rabbitmq-ha-1.21.0
    heritage: Tiller
    io.cattle.field/appId: rabbitmq
    release: rabbitmq
  name: rabbitmq-rabbitmq-ha
  namespace: rabbitmq
spec:
  podManagementPolicy: OrderedReady
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rabbitmq-ha
      release: rabbitmq
  serviceName: rabbitmq-rabbitmq-ha-discovery
  template:
    metadata:
      annotations:
        checksum/config: 61e8727c66a37947d55046ec366e70b9b30d164d1db7a85be2899f3deda3e450
      creationTimestamp: null
      labels:
        app: rabbitmq-ha
        release: rabbitmq
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: rabbitmq-ha
                  release: rabbitmq
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - env:
        - name: MY_POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: RABBITMQ_USE_LONGNAME
          value: 'true'
        - name: RABBITMQ_NODENAME
          value: rabbit@$(MY_POD_NAME).rabbitmq-rabbitmq-ha-discovery.rabbitmq.svc.cluster.local
        - name: K8S_HOSTNAME_SUFFIX
          value: .rabbitmq-rabbitmq-ha-discovery.rabbitmq.svc.cluster.local
        - name: K8S_SERVICE_NAME
          value: rabbitmq-rabbitmq-ha-discovery
        - name: RABBITMQ_ERLANG_COOKIE
          valueFrom:
            secretKeyRef:
              key: rabbitmq-erlang-cookie
              name: rabbitmq-rabbitmq-ha
        image: rabbitmq:3.7-alpine
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - 'wget -O - -q --header "Authorization: Basic bWFuYWdlbWVudDpFOVIzZmpabTRlakZrVkZF"
              http://localhost:15672/api/healthchecks/node | grep -qF "{\"status\":\"ok\"}"'
          failureThreshold: 6
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: rabbitmq-ha
        ports:
        - containerPort: 4369
          name: epmd
          protocol: TCP
        - containerPort: 5672
          name: amqp
          protocol: TCP
        - containerPort: 15672
          name: http
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - 'wget -O - -q --header "Authorization: Basic bWFuYWdlbWVudDpFOVIzZmpabTRlakZrVkZF"
              http://localhost:15672/api/healthchecks/node | grep -qF "{\"status\":\"ok\"}"'
          failureThreshold: 6
          initialDelaySeconds: 20
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: data
        - mountPath: /etc/rabbitmq
          name: config
        - mountPath: /etc/definitions
          name: definitions
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
        runAsUser: 100
      serviceAccount: rabbitmq-rabbitmq-ha
      serviceAccountName: rabbitmq-rabbitmq-ha
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir: {}
        name: config
      - configMap:
          defaultMode: 420
          name: rabbitmq-rabbitmq-ha
        name: configmap
      - name: definitions
        secret:
          defaultMode: 420
          items:
          - key: definitions.json
            path: definitions.json
          secretName: rabbitmq-rabbitmq-ha
      - emptyDir: {}
        name: data
  updateStrategy:
    type: OnDelete
