rabbitmq/rabbitmq-rabbitmq-ha-discovery.svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: 'true'
  labels:
    app: rabbitmq-ha
    chart: rabbitmq-ha-1.21.0
    heritage: Tiller
    io.cattle.field/appId: rabbitmq
    release: rabbitmq
  name: rabbitmq-rabbitmq-ha-discovery
  namespace: rabbitmq
spec:
  ports:
  - name: http
    port: 15672
    protocol: TCP
    targetPort: http
  - name: amqp
    port: 5672
    protocol: TCP
    targetPort: amqp
  - name: epmd
    port: 4369
    protocol: TCP
    targetPort: epmd
  publishNotReadyAddresses: true
  selector:
    app: rabbitmq-ha
    release: rabbitmq
  sessionAffinity: None
  type: ClusterIP
