rabbitmq/rabbitmq-rabbitmq-ha.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq-ha
    chart: rabbitmq-ha-1.20.1
    heritage: Tiller
    io.cattle.field/appId: rabbitmq
    release: rabbitmq
  name: rabbitmq-rabbitmq-ha
  namespace: rabbitmq
spec:
  ports:
  - name: http
    port: 15672
    protocol: TCP
    targetPort: http
  - name: amqp
    port: 5672
    protocol: TCP
    targetPort: amqp
  - name: epmd
    port: 4369
    protocol: TCP
    targetPort: epmd
  selector:
    app: rabbitmq-ha
    release: rabbitmq
  sessionAffinity: None
  type: ClusterIP
